@@ -228,7 +228,6 @@ class TestKey:
         key1.delete()
         assert not key1.exists()
 
-
     def test_bytes_from_file(self, keyfs):
         key1 = keyfs.addkey("somedir/file", bytes)
         f = py.io.BytesIO(b"hello")
