@@ -64,3 +64,4 @@ norecursedirs = .tox ja
 rsyncdirs = devpi_server testing
 flakes-ignore =
     test_*.py ImportStarUsed
+    bench/*.py
